# rust_tools

./: .gitignore  AGENTS.md  CHANGELOG_PROMPT_SKILL.md  Cargo.toml  Makefile  PROMPT_SKILL_AGENT_UPDATE.md  README.md  SKILLS_CHEATSHEET.md  SKILLS_COMPLETE_SUMMARY.md  SKILLS_COMPLETE_SUMMARY_EN.md  SKILLS_GUIDE.md  SKILLS_INSTALLATION_SUMMARY.md  SKILLS_QUICK_REFERENCE.md  SKILL_REFACTOR_SUMMARY.md  debug-agent-hello-slow.md  models.json  move_executable.sh  review.md  secret.py  test_chars  test_chars.rs  test_memory_feature.sh  test_row  test_row.rs  test_stream  test_stream.rs  test_stream2  test_stream2.rs  test_table  test_table.rs  test_table2  test_table2.rs
.dbg/: agent-hello-slow.env  trae-debug-log-agent-hang.ndjson
.rust_tools/: code_discovery_policy.json
config/intent/: intent_model.json  training_corpus.json
crates/aios_kernel/: Cargo.toml
crates/aios_kernel/src/: kernel.rs  lib.rs  local.rs  primitives.rs  types.rs
crates/mcp_browser/: AGENTS.md  Cargo.toml
crates/mcp_browser/src/: browser.rs  jsonrpc.rs  main.rs  tools.rs
crates/mcp_excel/: AGENTS.md  Cargo.toml
crates/mcp_excel/src/: jsonrpc.rs  main.rs  osa.rs  tools.rs
crates/mcp_stdio/: Cargo.toml
crates/mcp_stdio/src/: lib.rs
crates/redis_lock/: Cargo.toml  README.md
crates/redis_lock/examples/: basic_usage.rs
crates/redis_lock/src/: client.rs  error.rs  lib.rs  lock.rs  watchdog.rs
crates/redis_lock/src/locks/: fair.rs  mod.rs  readwrite.rs  reentrant.rs
crates/redis_lock/tests/: integration_test.rs
crates/rust_tools_macros/: Cargo.toml
crates/rust_tools_macros/src/: agent_hang.rs  lib.rs  lru_cache.rs  timing.rs
docs/: IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  VERIFICATION_CHECKLIST.md  agent-hang-debug.md  ai_agent_code_review.md  ai_agent_code_review_v2.md  ai_agent_code_review_v3.md  ai_agent_code_review_v4.md  aios_kernel_analysis.md  code-discovery-policy-tuning.md  debugger-skill-optimization.md  intent_refactor.md  intent_training.md  mcp-feishu-export-examples.md  mcp-feishu-export-features.md  mcp-feishu.md  memory_problem.md  prompt-skill-agent-guide.md  skill_matching_refactor.md
docs/agent-guides/: ai-driver.md  ai-mcp.md  ai-provider.md  ai-tools.md
docs/logs/: COMPILATION_FIX_SUMMARY.md  HASHMAP_SKIPMAP_ANALYSIS.md  TEST_FILES_CLEANUP.md
docs/reviews/: agent-a-fixes-2026-07-07.md  agent-a-review-2026-07-06.md
examples/: before-optimization.txt  prompt-skill-quick-reference.md  test-prompt-skill.md
scripts/: cleanup_test_files.sh  generate_training_data.py  train_agent_route_model.py  train_intent_model.py  train_skill_match_model.py
src/: lib.rs  trie.rs
src/ai/: cli.rs  config.rs  driver.rs  history.rs  mcp.rs  mcp_example_server.rs  mod.rs  models.rs  prompt.rs  request.rs  skills.rs  stream.rs  tests.rs  tools.rs  types.rs
src/ai/builtin_skills/: code-review.skill  openclaw.skill
src/ai/driver/: input.rs  mcp_init.rs  mod.rs  model.rs  params.rs  print.rs  signal.rs  skill_matching.rs  tools.rs
src/algow/: mod.rs  slice.rs
src/clipboard/: binary_content.rs  image_content.rs  mod.rs  string_content.rs
src/clipboardw/: binary_content.rs  image_content.rs  mod.rs  string_content.rs
src/cmd/: mod.rs  run.rs
src/collections/: graph.rs  lru_cache.rs  mod.rs  ordered_map.rs  ordered_set.rs  queue.rs  rb_tree.rs  stack.rs  tree_map.rs  tree_set.rs  trie.rs  uf.rs
src/common/: configw.rs  editor.rs  mod.rs  prompt.rs  types.rs  utils.rs
src/commonw/: configw.rs  editor.rs  filename.rs  mod.rs  secret.rs  types.rs  utils.rs
src/cw/: bloom_filter.rs  concurrent_hash_map.rs  counter.rs  deque_list.rs  graph.rs  lru_cache.rs  mod.rs  ordered_map.rs  ordered_set.rs  priority_queue.rs  queue.rs  skip_list.rs  stack.rs  tree_map.rs  tree_set.rs  trie.rs  uf.rs  zset.rs
src/jsonw/: diff.rs  json.rs  mod.rs  sanitize.rs  sort.rs  types.rs
src/pdfw/: mod.rs
src/sortw/: mod.rs
src/strw/: calc.rs  check.rs  find.rs  format.rs  indices.rs  mod.rs  move.rs  search.rs  split.rs  trim.rs
src/terminalw/: filepath.rs  find.rs  mod.rs  parser.rs  utils.rs
src/terminalw/internal/: actiontype.rs  mod.rs  parser.rs  parser_impl.rs
tests/: emoji_width_check.rs  jsonw_go_compat.rs  strw_go_compat.rs  strw_more_go_compat.rs  strw_split.rs  terminalw_go_compat.rs  test_lru_cache_macro.rs
