[package]
name = "rust_tools"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.3"
image = {version = "0.25.8", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico", "qoi"]}
clap = { version = "*", features = ["derive"] }
rustc-hash = "*"
colored = "3.0.0"
regex = "1.12.2"
base64 = "0.22.1"
libc = "0.2"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = "0.4"
ctrlc = "3.4"
crossterm = "0.28"
futures-util = "0.3"
glob = "0.3"
inventory = "0.3"
mongodb = "3.4"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_28"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "stream"] }
rust_decimal = "1"
rustyline = "15"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10.2", default-features = false, features = ["crossterm_0_28"] }
unicode-width = "0.2"
md5 = "0.7"
num_cpus = "1.16"
lopdf = "*"
pdf-extract = "*"
rand = "0.10.0"
fastembed = "4"
sled = "0.34"
dirs = "5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "*"
objc2-foundation = "*"
objc2-vision = { version = "*", features = ["VNRequest", "VNObservation"] }
