[package]
name = "rust_tools"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/rust_tools_macros",
    "crates/aios_kernel",
    "crates/mcp_stdio",
    "crates/mcp_browser",
    "crates/mcp_excel",
]

[features]
default = []
# Enables agent hang investigation hooks; keep disabled for normal development and release builds.
agent-hang-debug = []

[dependencies]
arboard = "3.3"
image = {version = "0.25.8", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff", "ico", "qoi"]}
clap = { version = "4", features = ["derive"] }
rustc-hash = "2"
colored = "3.0.0"
regex = "1.12.2"
base64 = "0.22.1"
libc = "0.2"
sha2 = "0.10.8"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
uuid = { version = "1.18.1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = "0.4"
ctrlc = "3.4"
crossterm = "0.28"
futures-util = "0.3"
inventory = "0.3"
mongodb = "3.4"
notify = "8.2"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_28"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls", "stream"] }
rust_decimal = "1"
rustyline = "15.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "sync"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10.2", default-features = false, features = ["crossterm_0_28"] }
unicode-width = "0.2"
lopdf = "0.40"
rand = "0.10.0"
dirs = "6"
rust_tools_macros = { path = "crates/rust_tools_macros" }
aios_kernel = { path = "crates/aios_kernel" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-vision = { version = "0.3", features = ["VNRequest", "VNObservation"] }

[profile.release]
strip = true
panic = "abort"
